# Online-retail-platform

./: .env.example  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.dev.txt  requirements.prod.txt
core/apps/retail/: admin.py  apps.py  choices.py  mixins.py  models.py  serializers.py  tasks.py  views.py
core/apps/retail/management/commands/: fill_bd.py
core/apps/retail/migrations/: 0001_initial.py  0002_initial.py
core/apps/users/: admin.py  models.py  urls.py
core/apps/users/migrations/: 0001_initial.py
core/project/: asgi.py  celery_app.py  urls.py  wsgi.py  yasg.py
core/project/settings/: local.py  main.py
